Update - Implemented Team section and main element...
Implemented Team section containing h1 tag, text element, button and a block inside it containing an h2 tag inside it, each one containing and img, an h3 tag and a text element. For last implemented the main element

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -9,7 +9,7 @@
     <!--* Header -->
     <header>
       <a href="/">
-        <img src="/html_advanced/logo.png" alt="logo" />
+        <img src="#" alt="logo" />
       </a>
 
       <!-- Links -->
@@ -18,6 +18,48 @@
         <a href="#">Courses</a>
         <a href="#">Login</a>
       </div>
+
+      <!-- Banner -->
+      <section>
+        <!-- CTA -->
+        <div>
+          <h1>Become a professional chef</h1>
+          <p>
+            <span>Learn</span>
+            <span>Cook</span>
+            <span>Enjoy</span>
+          </p>
+          <button>Learn now</button>
+        </div>
+
+        <!-- Team -->
+        <div>
+          <h2>Learn from the experts</h2>
+          <div>
+            <div>
+              <img src="#" alt="Chef portrait" />
+              <h3>Chef 1</h3>
+              <p>First chef</p>
+            </div>
+            <div>
+              <img src="#" alt="Chef portrait" />
+              <h3>Chef 2</h3>
+              <p>Second chef</p>
+            </div>
+            <div>
+              <img src="#" alt="Chef portrait" />
+              <h3>Chef 3</h3>
+              <p>Third chef</p>
+            </div>
+            <div>
+              <img src="#" alt="Chef portrait" />
+              <h3>Chef 4</h3>
+              <p>Fourth chef</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
+    <main></main>
   </body>
 </html>
