Update - Implemented Quote section...
Implemented quote section inside main tag containing a section with a block inside containing an image and another block, containing a blockquote tag, a text for the quote author and another text element

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -60,6 +60,24 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Quote -->
+      <section>
+        <div>
+          <img src="#" alt="Quote image" />
+          <div>
+            <blockquote>
+              <p>Author Name</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                vero repellendus ea iste exercitationem ipsam illum porro error.
+                Unde aliquid dicta omnis veniam nostrum non doloribus
+                repudiandae earum adipisci laboriosam.
+              </p>
+            </blockquote>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
