Update - Implemented Videos section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -6,18 +6,18 @@
     <title>HTML Advanced</title>
   </head>
   <body>
-    <!--* Header -->
+    <!-- Header -->
     <header>
       <a href="/">
         <img src="#" alt="logo" />
       </a>
 
       <!-- Links -->
-      <div>
+      <nav>
         <a href="#">About us</a>
         <a href="#">Courses</a>
         <a href="#">Login</a>
-      </div>
+      </nav>
 
       <!-- Banner -->
       <section>
@@ -36,21 +36,25 @@
         <div>
           <h2>Learn from the experts</h2>
           <div>
+            <!-- Member -->
             <div>
               <img src="#" alt="Chef portrait" />
               <h3>Chef 1</h3>
               <p>First chef</p>
             </div>
+            <!-- Member -->
             <div>
               <img src="#" alt="Chef portrait" />
               <h3>Chef 2</h3>
               <p>Second chef</p>
             </div>
+            <!-- Member -->
             <div>
               <img src="#" alt="Chef portrait" />
               <h3>Chef 3</h3>
               <p>Third chef</p>
             </div>
+            <!-- Member -->
             <div>
               <img src="#" alt="Chef portrait" />
               <h3>Chef 4</h3>
@@ -75,6 +79,105 @@
                 repudiandae earum adipisci laboriosam.
               </p>
             </blockquote>
+          </div>
+        </div>
+      </section>
+
+      <!-- Videos -->
+      <section>
+        <h1>Get a preview of our courses</h1>
+        <div>
+          <!-- Block -->
+          <div>
+            <img src="#" alt="" />
+            <h2>Video 1</h2>
+            <p>Preview video</p>
+            <!-- Author info -->
+            <div>
+              <img src="#" alt="" />
+              <h3>Author</h3>
+            </div>
+            <!-- Rating -->
+            <div>
+              <!-- Stars -->
+              <div>
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+              </div>
+              <p>2 min</p>
+            </div>
+          </div>
+          <!-- Block -->
+          <div>
+            <img src="#" alt="" />
+            <h2>Video 2</h2>
+            <p>Preview video</p>
+            <!-- Author info -->
+            <div>
+              <img src="#" alt="" />
+              <h3>Author</h3>
+            </div>
+            <!-- Rating -->
+            <div>
+              <!-- Stars -->
+              <div>
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+              </div>
+              <p>2 min</p>
+            </div>
+          </div>
+          <!-- Block -->
+          <div>
+            <img src="#" alt="" />
+            <h2>Video 3</h2>
+            <p>Preview video</p>
+            <!-- Author info -->
+            <div>
+              <img src="#" alt="" />
+              <h3>Author</h3>
+            </div>
+            <!-- Rating -->
+            <div>
+              <!-- Stars -->
+              <div>
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+              </div>
+              <p>2 min</p>
+            </div>
+          </div>
+          <!-- Block -->
+          <div>
+            <img src="#" alt="" />
+            <h2>Video 4</h2>
+            <p>Preview video</p>
+            <!-- Author info -->
+            <div>
+              <img src="#" alt="" />
+              <h3>Author</h3>
+            </div>
+            <!-- Rating -->
+            <div>
+              <!-- Stars -->
+              <div>
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+                <img src="#" alt="" />
+              </div>
+              <p>2 min</p>
+            </div>
           </div>
         </div>
       </section>
