Update - Implemented membership section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -181,6 +181,38 @@
           </div>
         </div>
       </section>
+
+      <!-- Membership -->
+       <section>
+        <h1>Take a look our memberships</h1>
+        <div>
+          <!-- Membership -->
+          <div>
+            <img src="#" alt=""></img>
+            <h2>Tier 1</h2>
+            <p>This is a membership</p>
+          </div>
+          <!-- Membership -->
+          <div>
+            <img src="#" alt="">
+            <h2>Tier 2</h2>
+            <p>This is a membership</p>
+          </div>
+          <!-- Membership -->
+          <div>
+            <img src="#" alt="">
+            <h2>Tier 3</h2>
+            <p>This is a membership</p>
+          </div>
+          <!-- Membership -->
+          <div>
+            <img src="#" alt="">
+            <h2>Tier 4</h2>
+            <p>This is a membership</p>
+          </div>
+        </div>
+        <button>Learn more</button>
+       </section>
     </main>
   </body>
 </html>
