Update - Implemented FAQ section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -213,6 +213,39 @@
         </div>
         <button>Learn more</button>
        </section>
+
+       <!-- FAQ -->
+        <section>
+          <h1>FAQ</h1>
+          <div>
+            <!-- Row Block -->
+            <div>
+              <!-- Item Block -->
+              <div>
+                <h2>Question</h2>
+                <p>This is the answer to the question.</p>
+              </div>
+              <!-- Item Block -->
+              <div>
+                <h2>Question</h2>
+                <p>This is the answer to the question.</p>
+              </div>
+            </div>
+            <!-- Row Block -->
+            <div>
+              <!-- Item Block -->
+              <div>
+                <h2>Question</h2>
+                <p>This is the answer to the question.</p>
+              </div>
+              <!-- Item Block -->
+              <div>
+                <h2>Question</h2>
+                <p>This is the answer to the question.</p>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
   </body>
 </html>
