Update - Implemented Footer

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -247,5 +247,29 @@
           </div>
         </section>
     </main>
+
+    <!-- Footer -->
+     <footer>
+      <div>
+        <div>
+          <!-- Logo -->
+          <img src="#" alt="" />
+          <!-- Links -->
+          <div>
+            <a href="#">
+              <img src="" alt="">
+            </a>
+            <a href="#">
+              <img src="" alt="">
+            </a>
+            <a href="#">
+              <img src="" alt="">
+            </a>
+          </div>
+        </div>
+        <!-- Copyright -->
+        <p>Copyright</p>
+      </div>
+     </footer>
   </body>
 </html>
