Update - Implemented image alternative attributes text

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -89,92 +89,92 @@
         <div>
           <!-- Block -->
           <div>
-            <img src="#" alt="" />
+            <img src="#" alt="video thumbnail" />
             <h2>Video 1</h2>
             <p>Preview video</p>
             <!-- Author info -->
             <div>
-              <img src="#" alt="" />
+              <img src="#" alt="Author portrait" />
               <h3>Author</h3>
             </div>
             <!-- Rating -->
             <div>
               <!-- Stars -->
               <div>
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
               </div>
               <p>2 min</p>
             </div>
           </div>
           <!-- Block -->
           <div>
-            <img src="#" alt="" />
+            <img src="#" alt="video thumbnail" />
             <h2>Video 2</h2>
             <p>Preview video</p>
             <!-- Author info -->
             <div>
-              <img src="#" alt="" />
+              <img src="#" alt="Author portrait" />
               <h3>Author</h3>
             </div>
             <!-- Rating -->
             <div>
               <!-- Stars -->
               <div>
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
               </div>
               <p>2 min</p>
             </div>
           </div>
           <!-- Block -->
           <div>
-            <img src="#" alt="" />
+            <img src="#" alt="video thumbnail" />
             <h2>Video 3</h2>
             <p>Preview video</p>
             <!-- Author info -->
             <div>
-              <img src="#" alt="" />
+              <img src="#" alt="Author portrait" />
               <h3>Author</h3>
             </div>
             <!-- Rating -->
             <div>
               <!-- Stars -->
               <div>
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
               </div>
               <p>2 min</p>
             </div>
           </div>
           <!-- Block -->
           <div>
-            <img src="#" alt="" />
+            <img src="#" alt="video thumbnail" />
             <h2>Video 4</h2>
             <p>Preview video</p>
             <!-- Author info -->
             <div>
-              <img src="#" alt="" />
+              <img src="#" alt="Author portrait" />
               <h3>Author</h3>
             </div>
             <!-- Rating -->
             <div>
               <!-- Stars -->
               <div>
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
-                <img src="#" alt="" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
+                <img src="#" alt="star" />
               </div>
               <p>2 min</p>
             </div>
@@ -184,29 +184,29 @@
 
       <!-- Membership -->
        <section>
-        <h1>Take a look our memberships</h1>
+        <h1>Take a look at our memberships</h1>
         <div>
           <!-- Membership -->
           <div>
-            <img src="#" alt=""></img>
+            <img src="#" alt="thumbnail"></img>
             <h2>Tier 1</h2>
             <p>This is a membership</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="">
+            <img src="#" alt="thumbnail">
             <h2>Tier 2</h2>
             <p>This is a membership</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="">
+            <img src="#" alt="thumbnail">
             <h2>Tier 3</h2>
             <p>This is a membership</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="">
+            <img src="#" alt="thumbnail">
             <h2>Tier 4</h2>
             <p>This is a membership</p>
           </div>
@@ -253,17 +253,17 @@
       <div>
         <div>
           <!-- Logo -->
-          <img src="#" alt="" />
+          <img src="#" alt="logo" />
           <!-- Links -->
           <div>
             <a href="#">
-              <img src="" alt="">
+              <img src="" alt="facebook">
             </a>
             <a href="#">
-              <img src="" alt="">
+              <img src="" alt="twitter">
             </a>
             <a href="#">
-              <img src="" alt="">
+              <img src="" alt="instagram">
             </a>
           </div>
         </div>
