Fix - Fixed error in image tag that had unnecesary closing tag

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -183,73 +183,73 @@
       </section>
 
       <!-- Membership -->
-       <section>
+      <section>
         <h1>Take a look at our memberships</h1>
         <div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail"></img>
+            <img src="#" alt="thumbnail" />
             <h2>Tier 1</h2>
             <p>This is a membership</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail">
+            <img src="#" alt="thumbnail" />
             <h2>Tier 2</h2>
             <p>This is a membership</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail">
+            <img src="#" alt="thumbnail" />
             <h2>Tier 3</h2>
             <p>This is a membership</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail">
+            <img src="#" alt="thumbnail" />
             <h2>Tier 4</h2>
             <p>This is a membership</p>
           </div>
         </div>
         <button>Learn more</button>
-       </section>
+      </section>
 
-       <!-- FAQ -->
-        <section>
-          <h1>FAQ</h1>
+      <!-- FAQ -->
+      <section>
+        <h1>FAQ</h1>
+        <div>
+          <!-- Row Block -->
           <div>
-            <!-- Row Block -->
+            <!-- Item Block -->
             <div>
-              <!-- Item Block -->
-              <div>
-                <h2>Question</h2>
-                <p>This is the answer to the question.</p>
-              </div>
-              <!-- Item Block -->
-              <div>
-                <h2>Question</h2>
-                <p>This is the answer to the question.</p>
-              </div>
+              <h2>Question</h2>
+              <p>This is the answer to the question.</p>
             </div>
-            <!-- Row Block -->
+            <!-- Item Block -->
             <div>
-              <!-- Item Block -->
-              <div>
-                <h2>Question</h2>
-                <p>This is the answer to the question.</p>
-              </div>
-              <!-- Item Block -->
-              <div>
-                <h2>Question</h2>
-                <p>This is the answer to the question.</p>
-              </div>
+              <h2>Question</h2>
+              <p>This is the answer to the question.</p>
             </div>
           </div>
-        </section>
+          <!-- Row Block -->
+          <div>
+            <!-- Item Block -->
+            <div>
+              <h2>Question</h2>
+              <p>This is the answer to the question.</p>
+            </div>
+            <!-- Item Block -->
+            <div>
+              <h2>Question</h2>
+              <p>This is the answer to the question.</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
-     <footer>
+    <footer>
       <div>
         <div>
           <!-- Logo -->
@@ -257,19 +257,19 @@
           <!-- Links -->
           <div>
             <a href="#">
-              <img src="" alt="facebook">
+              <img src="" alt="facebook" />
             </a>
             <a href="#">
-              <img src="" alt="twitter">
+              <img src="" alt="twitter" />
             </a>
             <a href="#">
-              <img src="" alt="instagram">
+              <img src="" alt="instagram" />
             </a>
           </div>
         </div>
         <!-- Copyright -->
         <p>Copyright</p>
       </div>
-     </footer>
+    </footer>
   </body>
 </html>
