Fix - Corrected text and alts

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML Advanced</title>
+    <title>Smile School</title>
   </head>
   <body>
     <!-- Header -->
@@ -14,51 +14,51 @@
 
       <!-- Links -->
       <nav>
-        <a href="#">About us</a>
-        <a href="#">Courses</a>
-        <a href="#">Login</a>
+        <a href="#">COURSES</a>
+        <a href="#">PRICING</a>
+        <a href="#">LOGIN</a>
       </nav>
 
       <!-- Banner -->
       <section>
         <!-- CTA -->
         <div>
-          <h1>Become a professional chef</h1>
+          <h1>Get schooled</h1>
           <p>
-            <span>Learn</span>
-            <span>Cook</span>
-            <span>Enjoy</span>
+            <span>Smiles</span>
+            <span>Grin</span>
+            <span>Laugh</span>
           </p>
-          <button>Learn now</button>
+          <button>REGISTER FOR FREE</button>
         </div>
 
         <!-- Team -->
         <div>
-          <h2>Learn from the experts</h2>
+          <h2>Learn from the pros</h2>
           <div>
             <!-- Member -->
             <div>
-              <img src="#" alt="Chef portrait" />
-              <h3>Chef 1</h3>
-              <p>First chef</p>
+              <img src="#" alt="Avatar portrait" />
+              <h3>Phillip Massey</h3>
+              <p>« Smile of the year » 2018 - 2019</p>
             </div>
             <!-- Member -->
             <div>
-              <img src="#" alt="Chef portrait" />
-              <h3>Chef 2</h3>
-              <p>Second chef</p>
+              <img src="#" alt="Avatar portrait" />
+              <h3>Nannie Lawrence</h3>
+              <p>Best « little smile » 2017</p>
             </div>
             <!-- Member -->
             <div>
-              <img src="#" alt="Chef portrait" />
-              <h3>Chef 3</h3>
-              <p>Third chef</p>
+              <img src="#" alt="Avatar portrait" />
+              <h3>Bruce Walters</h3>
+              <p>Best « Friend Smile » live performance 2019</p>
             </div>
             <!-- Member -->
             <div>
-              <img src="#" alt="Chef portrait" />
-              <h3>Chef 4</h3>
-              <p>Fourth chef</p>
+              <img src="#" alt="Avatar portrait" />
+              <h3>Henry Hughes</h3>
+              <p>« 24th smiles » winner 2016 - 2019</p>
             </div>
           </div>
         </div>
@@ -71,31 +71,32 @@
           <img src="#" alt="Quote image" />
           <div>
             <blockquote>
-              <p>Author Name</p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                vero repellendus ea iste exercitationem ipsam illum porro error.
-                Unde aliquid dicta omnis veniam nostrum non doloribus
-                repudiandae earum adipisci laboriosam.
+                « Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!
               </p>
             </blockquote>
+            <p>Person Name</p>
+            <p>weather presenter</p>
           </div>
         </div>
       </section>
 
       <!-- Videos -->
       <section>
-        <h1>Get a preview of our courses</h1>
+        <h1>Most popular tutorials</h1>
         <div>
           <!-- Block -->
           <div>
             <img src="#" alt="video thumbnail" />
-            <h2>Video 1</h2>
-            <p>Preview video</p>
+            <h2>Diagonal Smile</h2>
+            <p>
+              Lorem, ipsum dolor sit amet, consect adipiscing elit, sed do
+              eiusmod.
+            </p>
             <!-- Author info -->
             <div>
               <img src="#" alt="Author portrait" />
-              <h3>Author</h3>
+              <h3>Phillip Massey</h3>
             </div>
             <!-- Rating -->
             <div>
@@ -105,20 +106,23 @@
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
-                <img src="#" alt="star" />
+                <img src="#" alt="empty star" />
               </div>
-              <p>2 min</p>
+              <p>8 min</p>
             </div>
           </div>
           <!-- Block -->
           <div>
             <img src="#" alt="video thumbnail" />
-            <h2>Video 2</h2>
-            <p>Preview video</p>
+            <h2>Sad Smile</h2>
+            <p>
+              Lorem, ipsum dolor sit amet, consect adipiscing elit, sed do
+              eiusmod.
+            </p>
             <!-- Author info -->
             <div>
               <img src="#" alt="Author portrait" />
-              <h3>Author</h3>
+              <h3>Phillip Massey</h3>
             </div>
             <!-- Rating -->
             <div>
@@ -128,20 +132,23 @@
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
-                <img src="#" alt="star" />
+                <img src="#" alt="empty star" />
               </div>
-              <p>2 min</p>
+              <p>8 min</p>
             </div>
           </div>
           <!-- Block -->
           <div>
             <img src="#" alt="video thumbnail" />
-            <h2>Video 3</h2>
-            <p>Preview video</p>
+            <h2>Natural Smile</h2>
+            <p>
+              Lorem, ipsum dolor sit amet, consect adipiscing elit, sed do
+              eiusmod.
+            </p>
             <!-- Author info -->
             <div>
               <img src="#" alt="Author portrait" />
-              <h3>Author</h3>
+              <h3>Phillip Massey</h3>
             </div>
             <!-- Rating -->
             <div>
@@ -151,20 +158,23 @@
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
-                <img src="#" alt="star" />
+                <img src="#" alt="empty star" />
               </div>
-              <p>2 min</p>
+              <p>8 min</p>
             </div>
           </div>
           <!-- Block -->
           <div>
             <img src="#" alt="video thumbnail" />
-            <h2>Video 4</h2>
-            <p>Preview video</p>
+            <h2>Happy Smile</h2>
+            <p>
+              Lorem, ipsum dolor sit amet, consect adipiscing elit, sed do
+              eiusmod.
+            </p>
             <!-- Author info -->
             <div>
               <img src="#" alt="Author portrait" />
-              <h3>Author</h3>
+              <h3>Phillip Massey</h3>
             </div>
             <!-- Rating -->
             <div>
@@ -174,9 +184,9 @@
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
                 <img src="#" alt="star" />
-                <img src="#" alt="star" />
+                <img src="#" alt="empty star" />
               </div>
-              <p>2 min</p>
+              <p>8 min</p>
             </div>
           </div>
         </div>
@@ -184,64 +194,96 @@
 
       <!-- Membership -->
       <section>
-        <h1>Take a look at our memberships</h1>
+        <h1>Free membership</h1>
         <div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail" />
-            <h2>Tier 1</h2>
-            <p>This is a membership</p>
+            <img src="#" alt="smile logo" />
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail" />
-            <h2>Tier 2</h2>
-            <p>This is a membership</p>
+            <img src="#" alt="smile logo" />
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail" />
-            <h2>Tier 3</h2>
-            <p>This is a membership</p>
+            <img src="#" alt="smile logo" />
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
           <!-- Membership -->
           <div>
-            <img src="#" alt="thumbnail" />
-            <h2>Tier 4</h2>
-            <p>This is a membership</p>
+            <img src="#" alt="smile logo" />
+            <h2>Lorem ipsum</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
-        <button>Learn more</button>
+        <button>REGISTER FOR FREE</button>
       </section>
 
       <!-- FAQ -->
       <section>
-        <h1>FAQ</h1>
+        <h1>F.A.Q.</h1>
         <div>
           <!-- Row Block -->
           <div>
             <!-- Item Block -->
             <div>
-              <h2>Question</h2>
-              <p>This is the answer to the question.</p>
+              <h2>How does this work?</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
             </div>
             <!-- Item Block -->
             <div>
-              <h2>Question</h2>
-              <p>This is the answer to the question.</p>
+              <h2>How does this work?</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
             </div>
           </div>
           <!-- Row Block -->
           <div>
             <!-- Item Block -->
             <div>
-              <h2>Question</h2>
-              <p>This is the answer to the question.</p>
+              <h2>How does this work?</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
             </div>
             <!-- Item Block -->
             <div>
-              <h2>Question</h2>
-              <p>This is the answer to the question.</p>
+              <h2>How does this work?</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
             </div>
           </div>
         </div>
@@ -257,18 +299,18 @@
           <!-- Links -->
           <div>
             <a href="#">
-              <img src="" alt="facebook" />
+              <img src="" alt="facebook icon" />
             </a>
             <a href="#">
-              <img src="" alt="twitter" />
+              <img src="" alt="twitter icon" />
             </a>
             <a href="#">
-              <img src="" alt="instagram" />
-            </a>
+              <img src="" alt="instagram icon" />
+            </a>Avatar
           </div>
         </div>
         <!-- Copyright -->
-        <p>Copyright</p>
+        <p><span>&#169</span>smileschool 2020</p>
       </div>
     </footer>
   </body>
